Fixed display on mobile

--- a/style.css
+++ b/style.css
@@ -9,34 +9,33 @@ html{
     box-sizing: inherit;
   }
 
-main{
-    min-height: 1000px;
+#page-container{
+    position: relative;
+    min-height: 100vh;
     background-color: #efefef;
     text-align: center;
+
 }
 
-header{
-    width: 100%;
-    height: 200px;
+main{
+    padding-bottom: 100px;
 }
 
 header>h1{
-    width: 100%;
-
     color: white;
     background-color: #222;
     padding: 10px;
     border-bottom: 4px solid black;
 }
 
-.statement{
+.status{
     font-size: 1.4rem;
     font-weight: bold;
     margin-top: 20px;
 }
 
 #game-container{
-    margin: 10px auto; 
+    margin: 40px auto; 
     width: 420px;
     display: flex;
     flex-wrap: wrap;
@@ -76,18 +75,14 @@ header>h1{
     text-align: center;
 }
 
-.status{
-    margin: 30px 0;
-}
-
 .restart{
     background-color: #333333;
     margin-bottom: 50px;
 }
 
-footer{
+#footer{
     margin-top: 50px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     height: 100px;
     width: 100%;
@@ -96,14 +91,34 @@ footer{
     background-color: #222;
     padding: 10px;
     border-top: 3px solid black;
+    /* transition: transform 0.25s; */
+
 }
+.footer.is-hidden {
+    transform: translateY(100%);
+}
+.footer.is-visible {
+    transform: translateY(0);
+}
+
 .creator{
     padding: 10px 0 ;
     color: white;
 }
 
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 520px) {
+    
+    header>h1{
+        font-size: 1.8rem;
+    }
+
+    .status{
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-top: 20px;
+    }
+
     #game-container{
         margin: 50px auto; 
         width: 300px;
@@ -119,10 +134,10 @@ footer{
     }
   }
 
-  @media only screen and (max-width: 300px) {
-      
+  @media only screen and (max-width: 340px) {
+
     #game-container{
-        margin: 100px auto 20px auto; 
+        margin: 20px auto 20px auto; 
         /* margin-top: 50px; */
         width: 240px;
 
